Add prism for highligth code.

--- a/package.json
+++ b/package.json
@@ -25,11 +25,15 @@
     "framer-motion": "^10.12.12",
     "gray-matter": "^4.0.3",
     "next": "13.4.2",
+    "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "remark": "^14.0.3",
     "remark-html": "^15.0.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/prismjs": "^1.26.0"
   }
 }
