--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "eslint-config-next": "13.4.2",
     "framer-motion": "^10.12.12",
     "gray-matter": "^4.0.3",
-    "next": "13.4.2",
+    "next": "^13.4.3",
     "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
