--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-config-next": "13.4.2",
     "framer-motion": "^10.12.12",
     "gray-matter": "^4.0.3",
+    "ms": "^2.1.3",
     "next": "^13.4.3",
     "prismjs": "^1.29.0",
     "react": "18.2.0",
@@ -34,6 +35,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/ms": "^0.7.31",
     "@types/prismjs": "^1.26.0"
   }
 }
