--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "20.2.0",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "@vercel/og": "^0.5.6",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "eslint": "8.40.0",
