--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@vercel/og": "^0.5.6",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
-    "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "framer-motion": "^10.12.12",
     "gray-matter": "^4.0.3",
@@ -37,6 +36,9 @@
   },
   "devDependencies": {
     "@types/ms": "^0.7.31",
-    "@types/prismjs": "^1.26.0"
+    "@types/prismjs": "^1.26.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
+    "eslint": "^8.41.0"
   }
 }
