--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gray-matter": "^4.0.3",
     "ms": "^2.1.3",
     "next": "^13.4.4",
+    "pluralize": "^8.0.0",
     "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@types/ms": "^0.7.31",
+    "@types/pluralize": "^0.0.29",
     "@types/prismjs": "^1.26.0",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
