--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "introspect": "drizzle-kit introspect:mysql"
   },
   "dependencies": {
     "@chakra-ui/next-js": "^2.1.3",
     "@chakra-ui/react": "^2.6.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@planetscale/database": "^1.7.0",
     "@tanstack/react-query": "^4.29.7",
     "@tanstack/react-query-devtools": "^4.29.7",
     "@types/node": "20.2.0",
@@ -21,11 +23,12 @@
     "@vercel/og": "^0.5.6",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
+    "drizzle-orm": "^0.27.0",
     "eslint-config-next": "13.4.2",
     "framer-motion": "^10.12.12",
     "gray-matter": "^4.0.3",
     "ms": "^2.1.3",
-    "next": "^13.4.4",
+    "next": "^13.4.6",
     "pluralize": "^8.0.0",
     "prismjs": "^1.29.0",
     "react": "18.2.0",
@@ -41,6 +44,8 @@
     "@types/prismjs": "^1.26.0",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
+    "dotenv": "^16.3.1",
+    "drizzle-kit": "^0.19.1",
     "eslint": "^8.41.0"
   }
 }
