--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-config-next": "13.4.2",
     "framer-motion": "^10.12.12",
     "gray-matter": "^4.0.3",
+    "lodash": "^4.17.21",
     "ms": "^2.1.3",
     "next": "^13.4.6",
     "pluralize": "^8.0.0",
