--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "framer-motion": "^10.18.0",
     "gray-matter": "^4.0.3",
     "lodash": "^4.17.21",
+    "lru-cache": "^11.1.0",
     "ms": "^2.1.3",
     "next": "^15.3.3",
     "pluralize": "^8.0.0",
