--- a/package.json
+++ b/package.json
@@ -7,14 +7,20 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "introspect": "drizzle-kit introspect:mysql"
+    "db:introspect": "drizzle-kit introspect:mysql",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
     "@chakra-ui/next-js": "^2.4.2",
     "@chakra-ui/react": "^2.10.9",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@planetscale/database": "^1.7.0",
+    "@next/swc-darwin-arm64": "^15.3.4",
+    "@planetscale/database": "^1.19.0",
+    "@t3-oss/env-nextjs": "^0.13.8",
     "@tanstack/react-query": "^5.80.10",
     "@tanstack/react-query-devtools": "^5.80.10",
     "@types/node": "20.2.0",
@@ -23,7 +29,8 @@
     "@vercel/og": "^0.5.6",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
-    "drizzle-orm": "^0.27.0",
+    "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.44.2",
     "eslint-config-next": "13.4.2",
     "framer-motion": "^10.18.0",
     "gray-matter": "^4.0.3",
@@ -38,7 +45,8 @@
     "react-icons": "^4.8.0",
     "remark": "^14.0.3",
     "remark-html": "^15.0.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@types/ms": "^0.7.31",
@@ -46,7 +54,7 @@
     "@types/prismjs": "^1.26.0",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
-    "drizzle-kit": "^0.19.1",
+    "drizzle-kit": "^0.31.1",
     "eslint": "^8.41.0"
   }
 }
