--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "remark": "^14.0.3",
     "remark-html": "^15.0.2",
     "typescript": "5.0.4",
+    "usehooks-ts": "^3.1.1",
     "zod": "^3.25.67"
   },
   "devDependencies": {
