--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/next-js": "^2.4.2",
-    "@chakra-ui/react": "^2.10.9",
+    "@chakra-ui/react": "^3.21.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@planetscale/database": "^1.19.0",
@@ -38,11 +38,12 @@
     "lru-cache": "^11.1.0",
     "ms": "^2.1.3",
     "next": "^15.3.3",
+    "next-themes": "^0.4.6",
     "pluralize": "^8.0.0",
     "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0",
+    "react-icons": "^4.12.0",
     "remark": "^14.0.3",
     "remark-html": "^15.0.2",
     "typescript": "5.0.4",
