--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,5 +32,5 @@
     "**/*.js",
     ".next/types/**/*.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", ".next", "out", "dist", "build", "coverage", "public", "src/__tests__", "src/__mocks__"]
 }
