--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource/libre-baskerville": "^5.2.6",
+    "@fontsource/nothing-you-could-do": "^5.2.6",
     "@planetscale/database": "^1.19.0",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@tanstack/react-query": "^5.80.10",
