--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "cSpell.words": ["Chakra"],
+  "cSpell.words": ["Chakra", "shrunked", "treeify"],
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "files.watcherExclude": {
     "**/.next/**": true,
