--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "alex-blog",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -20,6 +21,7 @@
     "@emotion/react": "^11.14.0",
     "@fontsource/libre-baskerville": "^5.2.6",
     "@fontsource/nothing-you-could-do": "^5.2.6",
+    "@hookform/resolvers": "^5.1.1",
     "@planetscale/database": "^1.19.0",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@tanstack/react-query": "^5.80.10",
@@ -43,15 +45,18 @@
     "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.60.0",
     "react-icons": "^4.12.0",
     "remark": "^14.0.3",
     "remark-html": "^15.0.2",
+    "resend": "^4.6.0",
     "typescript": "5.0.4",
     "usehooks-ts": "^3.1.1",
     "zod": "^4.0.2"
   },
   "devDependencies": {
     "@types/ms": "^0.7.31",
+    "@types/nodemailer": "^6.4.17",
     "@types/pluralize": "^0.0.29",
     "@types/prismjs": "^1.26.0",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
