--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "alex-blog",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=22.0.0"
+  },
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -61,6 +64,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
     "drizzle-kit": "^0.31.1",
-    "eslint": "^8.41.0"
+    "eslint": "^8.41.0",
+    "eslint-plugin-unused-imports": "^4.1.4"
   }
 }
