--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
     "eslint-config-next": "13.4.2",
+    "framer-motion": "^12.23.11",
     "gray-matter": "^4.0.3",
     "lodash": "^4.17.21",
     "lru-cache": "^11.1.0",
@@ -49,6 +50,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.60.0",
     "react-icons": "^4.12.0",
+    "react-intersection-observer": "^9.16.0",
     "remark": "^14.0.3",
     "remark-html": "^15.0.2",
     "resend": "^4.6.0",
